--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "discord.js": "^12.5.3",
+    "discord.js-commando": "^0.12.3",
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2"
   }
