--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start:dev": "nodemon src/index.ts --signal SIGKILL",
-    "start": "node dist/src/index.js",
+    "start": "nodemon src/index.ts --signal SIGKILL",
+    "start:prod": "node dist/src/index.js",
     "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
